fix: overflow not working on mobile
-wrap all app in a div with overflow class, don't add overflow to body
directly

--- a/app/assets/style/helper/_base.scss
+++ b/app/assets/style/helper/_base.scss
@@ -14,6 +14,7 @@
 html {
     min-width: 100%;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -22,6 +23,7 @@ body {
     font-size: $fs-base;
     line-height: $lh-base;
     overflow-x: hidden;
+    
 }
 
 img {
