--- a/app/assets/style/helper/_utilies.scss
+++ b/app/assets/style/helper/_utilies.scss
@@ -241,3 +241,7 @@
 .p-relative {
     position: relative;
 }
+
+.overflow-x-hidden {
+    overflow-x: hidden;
+}
